la cancha-terminada

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 	<body>
 		<div class="uno">
 			<div class="dos">
+				<img id="bolaizq" src="img/bola.png">
+				<img id="bolacentro" src="img/bola.png">
+				<img id="bolader" src="img/bola.png">
 				<div class="porteriaizq inline arco"></div>
 				<div class="circulo inline"></div>
 				<div class="porteriader inline arco"></div>
 			</div>
 		</div>
-
 	</body>
 </html>
